# NeuroFrame-analysis

./: .gitignore  LICENSE  README.md  pyproject.toml
scripts/: compress_data.py  group_brain_skull_holes.py  group_brain_skull_overlap.py  group_input_alignment.py  overlay_view.py
src/neuroframe_analysis/: __init__.py  alignment.py  brain_mask.py
src/neuroframe_analysis/coregistration_analysis/: __init__.py  brain_mask.py  holes.py  holes_plots.py  overlap.py  overlap_plot.py
src/neuroframe_analysis/coregistration_analysis/holes_analysis/: __init__.py  holes.py  holes_dataclass.py  holes_plots.py
src/neuroframe_analysis/coregistration_analysis/overlap_analysis/: __init__.py  overlap.py  (+2 more)
src/neuroframe_analysis/dataclass/: Misalignment.py  __init__.py
src/neuroframe_analysis/logger/: filters.py  formaters.py  levels.py  logger.py
src/neuroframe_analysis/mouse/: Mouse.py  __init__.py  _assertions.py  _dunders.py  _plots.py  _properties.py
src/neuroframe_analysis/mouse_data/: MRI.py  MedicalImage.py  MicroCT.py  Segmentation.py  __init__.py
src/neuroframe_analysis/plots/: __init__.py  group_barplot.py  overlay_implot.py  plot_dataclass.py  plot_decorators.py  save_dataclass.py  save_plots.py
src/neuroframe_analysis/styling/: __init__.py  color_converter.py  colormaps.py  colors.py  graphic_classes.py  graphic_utils.py  nr_style_paper.mplstyle  show_style.py  style_initializer.py
src/neuroframe_analysis/utils/: __init__.py  image_utils.py  io_utils.py  nifty_utils.py  volume_utils.py
tests/integration/fixtures/: test_segmentation_info.csv
(+11 files in other folders)
