[project]
name = "neuroframe-analysis"
version = "0.1.0"
description = "The package to help you analyse all the data you generate during the atlas construction"
authors = [
    {name = "GuilhermeCF",email = "guilherme.henriquesdacostaferreira@epfl.ch"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "nibabel (>=5.3.3,<6.0.0)",
    "matplotlib (>=3.10.8,<4.0.0)",
    "opencv-python (>=4.12.0.88,<5.0.0.0)",
    "scikit-image (>=0.26.0,<0.27.0)"
]

[tool.poetry]
packages = [{include = "neuroframe_analysis", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
